--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "@svgr/rollup": "^2.4.1",
-    "array-flat-polyfill": "^1.0.0",
+    "array.prototype.flat": "^1.2.1",
     "babel-eslint": "9.0.0",
     "cross-env": "^5.1.4",
     "eslint": "5.6.0",
