--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "start": "rollup -c -w",
     "prepare": "yarn run build"
   },
+  "dependencies": {
+    "array.prototype.flat": "^1.2.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-external-helpers": "^7.2.0",
