--- a/package.json
+++ b/package.json
@@ -1,60 +1,18 @@
 {
   "name": "merge-resolver",
   "version": "0.1.1",
-  "description": "merge nested objects with graphql-like resolvers",
-  "author": "Bryan Goldstein",
+  "main": "index.js",
   "license": "MIT",
-  "repository": "https://github.com/brysgo/merge-resolver",
-  "main": "dist/index.js",
-  "module": "dist/index.es.js",
-  "jsnext:main": "dist/index.es.js",
-  "engines": {
-    "node": ">=8",
-    "npm": ">=5"
-  },
   "scripts": {
-    "test": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts test",
-    "build": "rollup -c",
-    "start": "rollup -c -w",
-    "prepare": "yarn run build"
+    "build": "neutrino build",
+    "test": "neutrino test"
   },
   "dependencies": {
     "array.prototype.flat": "^1.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-external-helpers": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-react": "^7.0.0",
-    "@svgr/rollup": "^4.1.0",
-    "array.prototype.flat": "^1.2.1",
-    "babel-eslint": "10.0.1",
-    "cross-env": "^5.1.4",
-    "eslint": "5.12.1",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-config-standard-react": "^7.0.2",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.0",
-    "eslint-plugin-react": "^7.10.0",
-    "eslint-plugin-standard": "^4.0.0",
-    "react-scripts": "^2.1.3",
-    "rollup": "^1.1.0",
-    "rollup-plugin-babel": "^4.3.0",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-postcss": "^2.0.0",
-    "rollup-plugin-url": "^2.1.0"
-  },
-  "files": [
-    "dist"
-  ],
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "@neutrinojs/jest": "^8.3.0",
+    "@neutrinojs/library": "^8.3.0",
+    "neutrino": "^8.3.0"
+  }
 }
