--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "merge-resolver",
-  "version": "0.0.0-semantic-release",
+  "version": "1.1.0",
   "main": "build/index.js",
   "license": "MIT",
   "scripts": {
@@ -18,6 +18,6 @@
     "jest": "^24.9.0"
   },
   "jest": {
-      "testRegex": "./test/.*.js$"
+    "testRegex": "./test/.*.js$"
   }
 }
