--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,6 +87,7 @@ jobs:
         with:
           node-version: "14"
           registry-url: "https://npm.pkg.github.com"
+          scope: "@brysgo"
       - name: Cache node_modules
         id: cache-modules
         uses: actions/cache@v2
